library/src/libqtextdocument.h

typedef struct QAbstractTextDocumentLayout QAbstractTextDocumentLayout;
typedef struct QChar QChar;
typedef struct QFont QFont;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QPagedPaintDevice QPagedPaintDevice;
typedef struct QPainter QPainter;
typedef struct QRegularExpression QRegularExpression;
typedef struct QSizeF QSizeF;
typedef struct QTextBlock QTextBlock;
typedef struct QTextCursor QTextCursor;
typedef struct QTextDocument QTextDocument;
typedef struct QTextFormat QTextFormat;
typedef struct QTextFrame QTextFrame;
typedef struct QTextObject QTextObject;
typedef struct QTextOption QTextOption;
typedef struct QUrl QUrl;
typedef struct QVariant QVariant;
QTextDocument* QTextDocument_new();
QTextDocument* QTextDocument_new2(libqt_string text);
QTextDocument* QTextDocument_new3(QObject* parent);
QTextDocument* QTextDocument_new4(libqt_string text, QObject* parent);
QMetaObject* QTextDocument_MetaObject(const QTextDocument* self);
void* QTextDocument_Metacast(QTextDocument* self, const char* param1);
int QTextDocument_Metacall(QTextDocument* self, int param1, int param2, void** param3);
libqt_string QTextDocument_Tr(const char* s);
QTextDocument* QTextDocument_Clone(const QTextDocument* self);
bool QTextDocument_IsEmpty(const QTextDocument* self);
void QTextDocument_Clear(QTextDocument* self);
void QTextDocument_SetUndoRedoEnabled(QTextDocument* self, bool enable);
bool QTextDocument_IsUndoRedoEnabled(const QTextDocument* self);
bool QTextDocument_IsUndoAvailable(const QTextDocument* self);
bool QTextDocument_IsRedoAvailable(const QTextDocument* self);
int QTextDocument_AvailableUndoSteps(const QTextDocument* self);
int QTextDocument_AvailableRedoSteps(const QTextDocument* self);
int QTextDocument_Revision(const QTextDocument* self);
void QTextDocument_SetDocumentLayout(QTextDocument* self, QAbstractTextDocumentLayout* layout);
QAbstractTextDocumentLayout* QTextDocument_DocumentLayout(const QTextDocument* self);
void QTextDocument_SetMetaInformation(QTextDocument* self, int info, libqt_string param2);
libqt_string QTextDocument_MetaInformation(const QTextDocument* self, int info);
libqt_string QTextDocument_ToHtml(const QTextDocument* self);
void QTextDocument_SetHtml(QTextDocument* self, libqt_string html);
libqt_string QTextDocument_ToMarkdown(const QTextDocument* self);
void QTextDocument_SetMarkdown(QTextDocument* self, libqt_string markdown);
libqt_string QTextDocument_ToRawText(const QTextDocument* self);
libqt_string QTextDocument_ToPlainText(const QTextDocument* self);
void QTextDocument_SetPlainText(QTextDocument* self, libqt_string text);
QChar* QTextDocument_CharacterAt(const QTextDocument* self, int pos);
QTextCursor* QTextDocument_Find(const QTextDocument* self, libqt_string subString);
QTextCursor* QTextDocument_Find2(const QTextDocument* self, libqt_string subString, QTextCursor* cursor);
QTextCursor* QTextDocument_FindWithExpr(const QTextDocument* self, QRegularExpression* expr);
QTextCursor* QTextDocument_Find3(const QTextDocument* self, QRegularExpression* expr, QTextCursor* cursor);
QTextFrame* QTextDocument_FrameAt(const QTextDocument* self, int pos);
QTextFrame* QTextDocument_RootFrame(const QTextDocument* self);
QTextObject* QTextDocument_Object(const QTextDocument* self, int objectIndex);
QTextObject* QTextDocument_ObjectForFormat(const QTextDocument* self, QTextFormat* param1);
QTextBlock* QTextDocument_FindBlock(const QTextDocument* self, int pos);
QTextBlock* QTextDocument_FindBlockByNumber(const QTextDocument* self, int blockNumber);
QTextBlock* QTextDocument_FindBlockByLineNumber(const QTextDocument* self, int blockNumber);
QTextBlock* QTextDocument_Begin(const QTextDocument* self);
QTextBlock* QTextDocument_End(const QTextDocument* self);
QTextBlock* QTextDocument_FirstBlock(const QTextDocument* self);
QTextBlock* QTextDocument_LastBlock(const QTextDocument* self);
void QTextDocument_SetPageSize(QTextDocument* self, QSizeF* size);
QSizeF* QTextDocument_PageSize(const QTextDocument* self);
void QTextDocument_SetDefaultFont(QTextDocument* self, QFont* font);
QFont* QTextDocument_DefaultFont(const QTextDocument* self);
void QTextDocument_SetSuperScriptBaseline(QTextDocument* self, double baseline);
double QTextDocument_SuperScriptBaseline(const QTextDocument* self);
void QTextDocument_SetSubScriptBaseline(QTextDocument* self, double baseline);
double QTextDocument_SubScriptBaseline(const QTextDocument* self);
void QTextDocument_SetBaselineOffset(QTextDocument* self, double baseline);
double QTextDocument_BaselineOffset(const QTextDocument* self);
int QTextDocument_PageCount(const QTextDocument* self);
bool QTextDocument_IsModified(const QTextDocument* self);
void QTextDocument_Print(const QTextDocument* self, QPagedPaintDevice* printer);
QVariant* QTextDocument_Resource(const QTextDocument* self, int typeVal, QUrl* name);
void QTextDocument_AddResource(QTextDocument* self, int typeVal, QUrl* name, QVariant* resource);
libqt_list /* of QTextFormat* */ QTextDocument_AllFormats(const QTextDocument* self);
void QTextDocument_MarkContentsDirty(QTextDocument* self, int from, int length);
void QTextDocument_SetUseDesignMetrics(QTextDocument* self, bool b);
bool QTextDocument_UseDesignMetrics(const QTextDocument* self);
void QTextDocument_SetLayoutEnabled(QTextDocument* self, bool b);
bool QTextDocument_IsLayoutEnabled(const QTextDocument* self);
void QTextDocument_DrawContents(QTextDocument* self, QPainter* painter);
void QTextDocument_SetTextWidth(QTextDocument* self, double width);
double QTextDocument_TextWidth(const QTextDocument* self);
double QTextDocument_IdealWidth(const QTextDocument* self);
double QTextDocument_IndentWidth(const QTextDocument* self);
void QTextDocument_SetIndentWidth(QTextDocument* self, double width);
double QTextDocument_DocumentMargin(const QTextDocument* self);
void QTextDocument_SetDocumentMargin(QTextDocument* self, double margin);
void QTextDocument_AdjustSize(QTextDocument* self);
QSizeF* QTextDocument_Size(const QTextDocument* self);
int QTextDocument_BlockCount(const QTextDocument* self);
int QTextDocument_LineCount(const QTextDocument* self);
int QTextDocument_CharacterCount(const QTextDocument* self);
void QTextDocument_SetDefaultStyleSheet(QTextDocument* self, libqt_string sheet);
libqt_string QTextDocument_DefaultStyleSheet(const QTextDocument* self);
void QTextDocument_Undo(QTextDocument* self, QTextCursor* cursor);
void QTextDocument_Redo(QTextDocument* self, QTextCursor* cursor);
void QTextDocument_ClearUndoRedoStacks(QTextDocument* self);
int QTextDocument_MaximumBlockCount(const QTextDocument* self);
void QTextDocument_SetMaximumBlockCount(QTextDocument* self, int maximum);
QTextOption* QTextDocument_DefaultTextOption(const QTextDocument* self);
void QTextDocument_SetDefaultTextOption(QTextDocument* self, QTextOption* option);
QUrl* QTextDocument_BaseUrl(const QTextDocument* self);
void QTextDocument_SetBaseUrl(QTextDocument* self, QUrl* url);
int QTextDocument_DefaultCursorMoveStyle(const QTextDocument* self);
void QTextDocument_SetDefaultCursorMoveStyle(QTextDocument* self, int style);
void QTextDocument_Connect_ContentsChange(QTextDocument* self, intptr_t slot);
void QTextDocument_Connect_ContentsChanged(QTextDocument* self, intptr_t slot);
void QTextDocument_Connect_UndoAvailable(QTextDocument* self, intptr_t slot);
void QTextDocument_Connect_RedoAvailable(QTextDocument* self, intptr_t slot);
void QTextDocument_Connect_UndoCommandAdded(QTextDocument* self, intptr_t slot);
void QTextDocument_Connect_ModificationChanged(QTextDocument* self, intptr_t slot);