src/qt/libqtextdocument.bf

extension CQt
{
	[LinkName("QTextDocument_new")]
	public static extern void* QTextDocument_new();
	[LinkName("QTextDocument_new2")]
	public static extern void* QTextDocument_new2(libqt_string text);
	[LinkName("QTextDocument_new3")]
	public static extern void* QTextDocument_new3(void* parent);
	[LinkName("QTextDocument_new4")]
	public static extern void* QTextDocument_new4(libqt_string text, void* parent);
	[LinkName("QTextDocument_MetaObject")]
	public static extern void* QTextDocument_MetaObject(void* c_this);
	[LinkName("QTextDocument_Metacast")]
	public static extern void* QTextDocument_Metacast(void* c_this, char8* param1);
	[LinkName("QTextDocument_Metacall")]
	public static extern int32 QTextDocument_Metacall(void* c_this, int64 param1, int32 param2, void* param3);
	[LinkName("QTextDocument_Tr")]
	public static extern libqt_string QTextDocument_Tr(char8* s);
	[LinkName("QTextDocument_Clone")]
	public static extern void* QTextDocument_Clone(void* c_this);
	[LinkName("QTextDocument_IsEmpty")]
	public static extern bool QTextDocument_IsEmpty(void* c_this);
	[LinkName("QTextDocument_Clear")]
	public static extern void QTextDocument_Clear(void* c_this);
	[LinkName("QTextDocument_SetUndoRedoEnabled")]
	public static extern void QTextDocument_SetUndoRedoEnabled(void* c_this, bool enable);
	[LinkName("QTextDocument_IsUndoRedoEnabled")]
	public static extern bool QTextDocument_IsUndoRedoEnabled(void* c_this);
	[LinkName("QTextDocument_IsUndoAvailable")]
	public static extern bool QTextDocument_IsUndoAvailable(void* c_this);
	[LinkName("QTextDocument_IsRedoAvailable")]
	public static extern bool QTextDocument_IsRedoAvailable(void* c_this);
	[LinkName("QTextDocument_AvailableUndoSteps")]
	public static extern int32 QTextDocument_AvailableUndoSteps(void* c_this);
	[LinkName("QTextDocument_AvailableRedoSteps")]
	public static extern int32 QTextDocument_AvailableRedoSteps(void* c_this);
	[LinkName("QTextDocument_Revision")]
	public static extern int32 QTextDocument_Revision(void* c_this);
	[LinkName("QTextDocument_SetDocumentLayout")]
	public static extern void QTextDocument_SetDocumentLayout(void* c_this, void* layout);
	[LinkName("QTextDocument_DocumentLayout")]
	public static extern void* QTextDocument_DocumentLayout(void* c_this);
	[LinkName("QTextDocument_SetMetaInformation")]
	public static extern void QTextDocument_SetMetaInformation(void* c_this, int64 info, libqt_string param2);
	[LinkName("QTextDocument_MetaInformation")]
	public static extern libqt_string QTextDocument_MetaInformation(void* c_this, int64 info);
	[LinkName("QTextDocument_ToHtml")]
	public static extern libqt_string QTextDocument_ToHtml(void* c_this);
	[LinkName("QTextDocument_SetHtml")]
	public static extern void QTextDocument_SetHtml(void* c_this, libqt_string html);
	[LinkName("QTextDocument_ToMarkdown")]
	public static extern libqt_string QTextDocument_ToMarkdown(void* c_this);
	[LinkName("QTextDocument_SetMarkdown")]
	public static extern void QTextDocument_SetMarkdown(void* c_this, libqt_string markdown);
	[LinkName("QTextDocument_ToRawText")]
	public static extern libqt_string QTextDocument_ToRawText(void* c_this);
	[LinkName("QTextDocument_ToPlainText")]
	public static extern libqt_string QTextDocument_ToPlainText(void* c_this);
	[LinkName("QTextDocument_SetPlainText")]
	public static extern void QTextDocument_SetPlainText(void* c_this, libqt_string text);
	[LinkName("QTextDocument_CharacterAt")]
	public static extern void QTextDocument_CharacterAt(void* c_this, int32 pos);
	[LinkName("QTextDocument_Find")]
	public static extern void QTextDocument_Find(void* c_this, libqt_string subString);
	[LinkName("QTextDocument_Find2")]
	public static extern void QTextDocument_Find2(void* c_this, libqt_string subString, void* cursor);
	[LinkName("QTextDocument_FindWithExpr")]
	public static extern void QTextDocument_FindWithExpr(void* c_this, void* expr);
	[LinkName("QTextDocument_Find3")]
	public static extern void QTextDocument_Find3(void* c_this, void* expr, void* cursor);
	[LinkName("QTextDocument_FrameAt")]
	public static extern void* QTextDocument_FrameAt(void* c_this, int32 pos);
	[LinkName("QTextDocument_RootFrame")]
	public static extern void* QTextDocument_RootFrame(void* c_this);
	[LinkName("QTextDocument_Object")]
	public static extern void* QTextDocument_Object(void* c_this, int32 objectIndex);
	[LinkName("QTextDocument_ObjectForFormat")]
	public static extern void* QTextDocument_ObjectForFormat(void* c_this, void* param1);
	[LinkName("QTextDocument_FindBlock")]
	public static extern void QTextDocument_FindBlock(void* c_this, int32 pos);
	[LinkName("QTextDocument_FindBlockByNumber")]
	public static extern void QTextDocument_FindBlockByNumber(void* c_this, int32 blockNumber);
	[LinkName("QTextDocument_FindBlockByLineNumber")]
	public static extern void QTextDocument_FindBlockByLineNumber(void* c_this, int32 blockNumber);
	[LinkName("QTextDocument_Begin")]
	public static extern void QTextDocument_Begin(void* c_this);
	[LinkName("QTextDocument_End")]
	public static extern void QTextDocument_End(void* c_this);
	[LinkName("QTextDocument_FirstBlock")]
	public static extern void QTextDocument_FirstBlock(void* c_this);
	[LinkName("QTextDocument_LastBlock")]
	public static extern void QTextDocument_LastBlock(void* c_this);
	[LinkName("QTextDocument_SetPageSize")]
	public static extern void QTextDocument_SetPageSize(void* c_this, void* size);
	[LinkName("QTextDocument_PageSize")]
	public static extern void QTextDocument_PageSize(void* c_this);
	[LinkName("QTextDocument_SetDefaultFont")]
	public static extern void QTextDocument_SetDefaultFont(void* c_this, void* font);
	[LinkName("QTextDocument_DefaultFont")]
	public static extern void QTextDocument_DefaultFont(void* c_this);
	[LinkName("QTextDocument_SetSuperScriptBaseline")]
	public static extern void QTextDocument_SetSuperScriptBaseline(void* c_this, double baseline);
	[LinkName("QTextDocument_SuperScriptBaseline")]
	public static extern double QTextDocument_SuperScriptBaseline(void* c_this);
	[LinkName("QTextDocument_SetSubScriptBaseline")]
	public static extern void QTextDocument_SetSubScriptBaseline(void* c_this, double baseline);
	[LinkName("QTextDocument_SubScriptBaseline")]
	public static extern double QTextDocument_SubScriptBaseline(void* c_this);
	[LinkName("QTextDocument_SetBaselineOffset")]
	public static extern void QTextDocument_SetBaselineOffset(void* c_this, double baseline);
	[LinkName("QTextDocument_BaselineOffset")]
	public static extern double QTextDocument_BaselineOffset(void* c_this);
	[LinkName("QTextDocument_PageCount")]
	public static extern int32 QTextDocument_PageCount(void* c_this);
	[LinkName("QTextDocument_IsModified")]
	public static extern bool QTextDocument_IsModified(void* c_this);
	[LinkName("QTextDocument_Print")]
	public static extern void QTextDocument_Print(void* c_this, void* printer);
	[LinkName("QTextDocument_Resource")]
	public static extern void QTextDocument_Resource(void* c_this, int32 typeVal, void* name);
	[LinkName("QTextDocument_AddResource")]
	public static extern void QTextDocument_AddResource(void* c_this, int32 typeVal, void* name, void* resource);
	[LinkName("QTextDocument_AllFormats")]
	public static extern void[] QTextDocument_AllFormats(void* c_this);
	[LinkName("QTextDocument_MarkContentsDirty")]
	public static extern void QTextDocument_MarkContentsDirty(void* c_this, int32 from, int32 length);
	[LinkName("QTextDocument_SetUseDesignMetrics")]
	public static extern void QTextDocument_SetUseDesignMetrics(void* c_this, bool b);
	[LinkName("QTextDocument_UseDesignMetrics")]
	public static extern bool QTextDocument_UseDesignMetrics(void* c_this);
	[LinkName("QTextDocument_SetLayoutEnabled")]
	public static extern void QTextDocument_SetLayoutEnabled(void* c_this, bool b);
	[LinkName("QTextDocument_IsLayoutEnabled")]
	public static extern bool QTextDocument_IsLayoutEnabled(void* c_this);
	[LinkName("QTextDocument_DrawContents")]
	public static extern void QTextDocument_DrawContents(void* c_this, void* painter);
	[LinkName("QTextDocument_SetTextWidth")]
	public static extern void QTextDocument_SetTextWidth(void* c_this, double width);
	[LinkName("QTextDocument_TextWidth")]
	public static extern double QTextDocument_TextWidth(void* c_this);
	[LinkName("QTextDocument_IdealWidth")]
	public static extern double QTextDocument_IdealWidth(void* c_this);
	[LinkName("QTextDocument_IndentWidth")]
	public static extern double QTextDocument_IndentWidth(void* c_this);
	[LinkName("QTextDocument_SetIndentWidth")]
	public static extern void QTextDocument_SetIndentWidth(void* c_this, double width);
	[LinkName("QTextDocument_DocumentMargin")]
	public static extern double QTextDocument_DocumentMargin(void* c_this);
	[LinkName("QTextDocument_SetDocumentMargin")]
	public static extern void QTextDocument_SetDocumentMargin(void* c_this, double margin);
	[LinkName("QTextDocument_AdjustSize")]
	public static extern void QTextDocument_AdjustSize(void* c_this);
	[LinkName("QTextDocument_Size")]
	public static extern void QTextDocument_Size(void* c_this);
	[LinkName("QTextDocument_BlockCount")]
	public static extern int32 QTextDocument_BlockCount(void* c_this);
	[LinkName("QTextDocument_LineCount")]
	public static extern int32 QTextDocument_LineCount(void* c_this);
	[LinkName("QTextDocument_CharacterCount")]
	public static extern int32 QTextDocument_CharacterCount(void* c_this);
	[LinkName("QTextDocument_SetDefaultStyleSheet")]
	public static extern void QTextDocument_SetDefaultStyleSheet(void* c_this, libqt_string sheet);
	[LinkName("QTextDocument_DefaultStyleSheet")]
	public static extern libqt_string QTextDocument_DefaultStyleSheet(void* c_this);
	[LinkName("QTextDocument_Undo")]
	public static extern void QTextDocument_Undo(void* c_this, void* cursor);
	[LinkName("QTextDocument_Redo")]
	public static extern void QTextDocument_Redo(void* c_this, void* cursor);
	[LinkName("QTextDocument_ClearUndoRedoStacks")]
	public static extern void QTextDocument_ClearUndoRedoStacks(void* c_this);
	[LinkName("QTextDocument_MaximumBlockCount")]
	public static extern int32 QTextDocument_MaximumBlockCount(void* c_this);
	[LinkName("QTextDocument_SetMaximumBlockCount")]
	public static extern void QTextDocument_SetMaximumBlockCount(void* c_this, int32 maximum);
	[LinkName("QTextDocument_DefaultTextOption")]
	public static extern void QTextDocument_DefaultTextOption(void* c_this);
	[LinkName("QTextDocument_SetDefaultTextOption")]
	public static extern void QTextDocument_SetDefaultTextOption(void* c_this, void* option);
	[LinkName("QTextDocument_BaseUrl")]
	public static extern void QTextDocument_BaseUrl(void* c_this);
	[LinkName("QTextDocument_SetBaseUrl")]
	public static extern void QTextDocument_SetBaseUrl(void* c_this, void* url);
	[LinkName("QTextDocument_DefaultCursorMoveStyle")]
	public static extern int64 QTextDocument_DefaultCursorMoveStyle(void* c_this);
	[LinkName("QTextDocument_SetDefaultCursorMoveStyle")]
	public static extern void QTextDocument_SetDefaultCursorMoveStyle(void* c_this, int64 style);
	[LinkName("QTextDocument_Connect_ContentsChange")]
	public static extern void QTextDocument_Connect_ContentsChange(void* c_this, c_intptr slot);
	[LinkName("QTextDocument_Connect_ContentsChanged")]
	public static extern void QTextDocument_Connect_ContentsChanged(void* c_this, c_intptr slot);
	[LinkName("QTextDocument_Connect_UndoAvailable")]
	public static extern void QTextDocument_Connect_UndoAvailable(void* c_this, c_intptr slot);
	[LinkName("QTextDocument_Connect_RedoAvailable")]
	public static extern void QTextDocument_Connect_RedoAvailable(void* c_this, c_intptr slot);
	[LinkName("QTextDocument_Connect_UndoCommandAdded")]
	public static extern void QTextDocument_Connect_UndoCommandAdded(void* c_this, c_intptr slot);
	[LinkName("QTextDocument_Connect_ModificationChanged")]
	public static extern void QTextDocument_Connect_ModificationChanged(void* c_this, c_intptr slot);
